k8s/admin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-admin
  namespace: hospital
  labels:
    app: hospital-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital-admin
  template:
    metadata:
      labels:
        app: hospital-admin
    spec:
      containers:
        - name: hospital-admin
          image: ashrafkhan0277/hospital-admin:89
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
