k8s/admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hospital-admin-svc
  namespace: hospital
  labels:
    app: hospital-admin
spec:
  type: NodePort
  selector:
    app: hospital-admin
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
